add smtp and new reset password endpoint
